[gd_scene load_steps=8 format=3 uid="uid://cqph40p6gljii"]

[ext_resource type="Script" path="res://Systems/Interactables/interactable.gd" id="1_0mgpg"]
[ext_resource type="Texture2D" uid="uid://yh036fwyfa3n" path="res://Assets/interaction_symbol_circle.png" id="2_podfh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yohwq"]

[sub_resource type="Animation" id="Animation_tqfuk"]
length = 0.001

[sub_resource type="Animation" id="Animation_4s7lb"]
resource_name = "appear"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InteractIcon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.01, 0.01, 0.01), Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sqqpr"]
resource_name = "disappear"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InteractIcon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0.01, 0.01, 0.01)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_msk6s"]
_data = {
"RESET": SubResource("Animation_tqfuk"),
"appear": SubResource("Animation_4s7lb"),
"disappear": SubResource("Animation_sqqpr")
}

[node name="Interactable" type="Area3D"]
script = ExtResource("1_0mgpg")

[node name="InteractIcon" type="Sprite3D" parent="."]
billboard = 1
texture = ExtResource("2_podfh")

[node name="ClickArea" type="Area3D" parent="InteractIcon"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractIcon/ClickArea"]
shape = SubResource("BoxShape3D_yohwq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_msk6s")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="InteractIcon/ClickArea" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="InteractIcon/ClickArea" to="." method="_on_click_area_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
